Minor UX fixes
* The "show more/less" buttons in sites like "Add host" is now
  rendered with text as well.
* Fix typo "right" instead of "Right" in the "User" menu.
* Remove overspecific CSS selector in dashlets that made warning
  messages unreadable.
* Use "visibility: hidden" to remove a gap in the in-page menu in
  Chrome. Remove an unnecessary "display: table-row" along the way.
* Set a background for the content_area div so that no white color
  is visible in Chrome for a short time when a page is loaded.
* Move the background color from td.heading to td so that it works
  in Firefox as well.

--- a/web/htdocs/themes/facelift/scss/_dashboard.scss
+++ b/web/htdocs/themes/facelift/scss/_dashboard.scss
@@ -52,12 +52,8 @@ div.dashlet {
       }
     }
 
-    > div {
-      color: $primary-font-color;
-
-      &[id*="dashlet_graph"] img[id*="dashlet_img"] {
-        filter: $pnp4nagios-img-filter;
-      }
+    > div[id*="dashlet_graph"] img[id*="dashlet_img"] {
+      filter: $pnp4nagios-img-filter;
     }
   }
 
