--- a/web/htdocs/themes/facelift/scss/_more.scss
+++ b/web/htdocs/themes/facelift/scss/_more.scss
@@ -51,12 +51,14 @@ a.more {
 }
 
 a.more {
+  text-decoration: none;
+
   div.show_less {
     display: none;
   }
 
   div.show_more {
-    display: block;
+    display: flex;
 
     &:after {
       content: url("images/icon_show_more.svg");
@@ -69,7 +71,7 @@ a.more {
     }
 
     div.show_less {
-      display: block;
+      display: flex;
 
       &:after {
         content: url("images/icon_show_less.svg");
@@ -99,9 +101,9 @@ a.more {
 
     div.show_more,
     div.show_less {
+      align-items: center;
+
       &:after {
-        position: relative;
-        top: 4px;
         margin-left: 6px;
       }
     }
